--- a/styles.css
+++ b/styles.css
@@ -1,131 +1,139 @@
 html, body {
-    min-width: 290px;
-      color: #000000;
-    font-family: "K2D", sans-serif;
-      font-size: 26px;
-    line-height: 1.5;
-  }
-  
-  .bold {
-      font-weight: bold;
-  }
-  
-  #navbar {
-    position: fixed;
-    min-width: 290px;
-    top: 0px;
-    left: 0px;
-    width: 200px;
-    height: 100%;
-    border-right: 3px solid black;
-  }
-  
-  header {
-      font-family: "Kantumruy Pro";
-    color: black;
-    margin: 10px;
-    text-align: center;
-    font-size: 1.8em;
-    font-weight: thin;
-  }
-  
-  #main-doc header {
-    text-align: left;
-    margin: 0px;
-  }
-  
+  min-width: 290px;
+	color: #000000;
+  font-family: "K2D", sans-serif;
+	font-size: 26px;
+  line-height: 1.5;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+#navbar {
+  position: fixed;
+  min-width: 290px;
+  top: 0px;
+  left: 0px;
+  width: 200px;
+  height: 100%;
+  background-color: #4A4A4A;
+}
+
+header {
+	font-family: "Kantumruy Pro";
+  color: #DCDCDC;
+  margin: 10px;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: thin;
+}
+
+#main-doc header {
+  color: black;
+  text-align: left;
+  margin: 0px;
+}
+
+#navbar ul {
+  height: 100%;
+  padding: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#navbar li {
+  color: #4A4A4A;
+  list-style: none;
+  position: relative;
+  width: 100%;
+}
+
+#navbar a {
+  display: block;
+  padding: 5px 15px;
+  color: white;
+  background-color: #AEAEAE;
+  text-decoration: none;
+  cursor: pointer;
+  border-top: 8px solid #4A4A4A;
+  border-right: 8px solid #4A4A4A;
+  border-left: 8px solid #4A4A4A;
+  border-radius: 25px;
+}
+
+#navbar a:hover {
+  background-color: gray;
+}
+
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
+  padding: 20px;
+  margin-bottom: 110px;
+}
+
+section article {
+  color: #4d4e53;
+  margin: 15px;
+  font-size: 0.96em;
+}
+
+section li {
+  margin: 15px 0px 0px 20px;
+}
+
+code {
+  display: block;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f7f7f7;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 815px) {
   #navbar ul {
-    height: 88%;
-    padding: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
+    border: 1px solid;
+    height: 207px;
   }
-  
-  #navbar li {
-    color: black;
-    border-top: 1px solid;
-    list-style: none;
-    position: relative;
-    width: 100%;
-  }
-  
-  #navbar a {
-    display: block;
-    padding: 10px 30px;
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  #main-doc {
+
+  #navbar {
+    background-color: #D7D7D7;
     position: absolute;
-    margin-left: 310px;
-    padding: 20px;
-    margin-bottom: 110px;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-height: 275px;
+    border: none;
+    z-index: 1;
+    border-bottom: 2px solid;
   }
-  
-  section article {
-    color: #4d4e53;
-    margin: 15px;
-    font-size: 0.96em;
-  }
-  
-  section li {
-    margin: 15px 0px 0px 20px;
-  }
-  
-  code {
-    display: block;
-    text-align: left;
-    white-space: pre-line;
+
+  #main-doc {
     position: relative;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 2;
-    background-color: #f7f7f7;
+    margin-left: 0px;
+    margin-top: 270px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #main-doc {
+    margin-left: -10px;
+  }
+
+  code {
+    margin-left: -20px;
+    width: 100%;
     padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 45px;
+    min-width: 233px;
   }
-  
-  @media only screen and (max-width: 815px) {
-    #navbar ul {
-      border: 1px solid;
-      height: 207px;
-    }
-  
-    #navbar {
-      background-color: white;
-      position: absolute;
-      top: 0;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      max-height: 275px;
-      border: none;
-      z-index: 1;
-      border-bottom: 2px solid;
-    }
-  
-    #main-doc {
-      position: relative;
-      margin-left: 0px;
-      margin-top: 270px;
-    }
-  }
-  
-  @media only screen and (max-width: 400px) {
-    #main-doc {
-      margin-left: -10px;
-    }
-  
-    code {
-      margin-left: -20px;
-      width: 100%;
-      padding: 15px;
-      padding-left: 10px;
-      padding-right: 45px;
-      min-width: 233px;
-    }
-  }
-  
+}
